tiffany-ui/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_required_enable_prompt.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 462
expression: "render_bottom_popup(&chat, 120)"
---
  Your organization requires the default tiffany-loop agent sandbox to continue. Set it up to protect your files and
  control network access.
  Learn more <https://github.com/macguffinQ/Tiffany/blob/main/tiffany-ui/docs/windows.md>

› 1. Set up default sandbox (requires Administrator permissions)
  2. Quit

  Press enter to confirm or esc to go back
